# vibe-core

./: meson.build
subprojects/: eventcore.wrap  mir-core.wrap  taggedalgebraic.wrap
